tests/native/lowering/corpus/rejected/w04_control_flow.php
<?php

function w03_rejected_w04(int $value): int
{
    while ($value > 0) {
        $value--;
    }
    return $value;
}

printf("%d\n", w03_rejected_w04(3));
